--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 </head>
 
 <body>
-  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
+    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
 
-    <symbol id="icon-sobre" viewBox="0 0 43 32">
-    <path  d="M38.667 0h-34.667c-2.205 0-4 1.795-4 4v24c0 2.205 1.795 4 4 4h34.667c2.205 0 4-1.795 4-4v-24c0-2.205-1.795-4-4-4zM38.667 2.667c0.181 0 0.355 0.037 0.512 0.104l-17.845 15.467-17.845-15.467c0.151-0.065 0.327-0.104 0.512-0.104h34.667zM38.667 29.333h-34.667c-0.736 0-1.333-0.597-1.333-1.333v0-22.413l17.792 15.421c0.233 0.203 0.539 0.327 0.875 0.327s0.642-0.124 0.876-0.328l-0.002 0.001 17.792-15.421v22.413c0 0.736-0.597 1.333-1.333 1.333v0z"></path>
-    </symbol>
-  </defs>
-</svg>
+      <symbol id="icon-sobre" viewBox="0 0 43 32">
+        <path
+          d="M38.667 0h-34.667c-2.205 0-4 1.795-4 4v24c0 2.205 1.795 4 4 4h34.667c2.205 0 4-1.795 4-4v-24c0-2.205-1.795-4-4-4zM38.667 2.667c0.181 0 0.355 0.037 0.512 0.104l-17.845 15.467-17.845-15.467c0.151-0.065 0.327-0.104 0.512-0.104h34.667zM38.667 29.333h-34.667c-0.736 0-1.333-0.597-1.333-1.333v0-22.413l17.792 15.421c0.233 0.203 0.539 0.327 0.875 0.327s0.642-0.124 0.876-0.328l-0.002 0.001 17.792-15.421v22.413c0 0.736-0.597 1.333-1.333 1.333v0z">
+        </path>
+      </symbol>
+    </defs>
+  </svg>
 
   <header>
 
@@ -39,12 +42,9 @@
 
       <ul class="contact">
         <li>
-          <svg class="icon" >
-            <use href="images/icons.svg"></use>
-          </svg>
 
-
-        <a class="contacts link1" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <a class="contacts link1" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
 
         <li><a class="contacts link3" href="tel:+525555296000">+52 55 5529 6000</a></li>
 
@@ -56,12 +56,12 @@
 
     <section class="initial">
 
-        <div class="container">
-          <h2 class="solutions">SOLUCIONES EFICACES PARA <br>SU NEGOCIO</h2>
-          <button type="button" class="click">Solicite nuestro servicio</button>
+      <div class="container">
+        <h2 class="solutions">SOLUCIONES EFICACES PARA <br>SU NEGOCIO</h2>
+        <button type="button" class="click">Solicite nuestro servicio</button>
 
 
-        </div>
+      </div>
 
     </section>
 
@@ -78,6 +78,10 @@
         </article>
 
         <article>
+
+          <svg class="icon-clock" width="70" height="70">
+            <use  href="./images/icons.svg#icon-reloj"></use>
+          </svg>
           <h3>PUNTUALIDAD</h3>
           <h4>Con nosotros, usted puede sentirse seguro y protegido.
             Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</h4>
@@ -97,23 +101,27 @@
         </article>
       </section>
 
-      </div>
+    </div>
 
 
 
-
-    <section class="services">
-
-      <div class="container">
-
+    <div class="container">
+      <section class="services">
         <h2 class="two">A qué nos dedicamos</h2>
-        <div class="information1">
-          <img src="images/img1.jpg" alt="Image1" class="image" width="374px">
-          <img src="images/img2.jpg" alt="Image2" class="image" width="374px">
-          <img src="images/img3.jpg" alt="Image3" class="image" width="374px">
-        </div>
-      </div>
-    </section>
+        <ul class="information1">
+          <li class="service">
+            <h3>APLICACIONES DE ESCRITORIO</h3>
+          </li>
+          <li class="service">
+            <h3>APLICACIONES MÓVILES</h3>
+          </li>
+          <li class="service">
+            <h3>SOLUCIONES DE DISEÑO</h3>
+          </li>
+
+        </ul>
+      </section>
+    </div>
 
 
 
