--- a/index.html
+++ b/index.html
@@ -60,17 +60,20 @@
     <div class=" section container">
 
       <section class="information">
+
         <article>
-          <h3>ATENCIÓN A LOS DETALLES</h3>
+          <p class="iconns">
+            <svg class="iconantena" width="65.32px" height="70">
+              <use xlink:href="./images/icons.svg#icon-antena"></use>
+            </svg>
+          </p>
+        <h3>ATENCIÓN A LOS DETALLES</h3>
           <h4>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar
             una solución a su medida.
           </h4>
         </article>
 
         <article>
-          <svg class="iconantena">
-            <use xlink:href="./images/icons.svg#icon-antena"></use>
-          </svg>
 
           <h3>PUNTUALIDAD</h3>
           <h4>Con nosotros, usted puede sentirse seguro y protegido.
