--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <use href="#icon-antena"></use>
             </svg>
           </p>
-          <h3>ATENCIÓN A LOS DETALLES</h3>
+          <h3 class="icontitle">PATENCIÓN A LOS DETALLES</h3>
           <h4>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar
             una solución a su medida.
           </h4>
@@ -215,7 +215,7 @@
             </svg>
           </p>
 
-          <h3>PUNTUALIDAD</h3>
+          <h3 class="icontitle">PUNTUALIDAD</h3>
           <h4>Con nosotros, usted puede sentirse seguro y protegido.
             Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</h4>
         </article>
@@ -226,7 +226,7 @@
               <use href="#icon-pc"></use>
             </svg>
           </p>
-          <h3>PLANIFICACIÓN</h3>
+          <h3 class="icontitle">PLANIFICACIÓN</h3>
           <h4>Usted podrá observar y participar en cada fase del desarrollo y aplicación de
             soluciones.<h4>
         </article>
@@ -237,7 +237,7 @@
               <use href="#icon-astronauta"></use>
             </svg>
           </p>
-          <h3>TEGNOLOGÍA MODERNA</h3>
+          <h3 class="icontitle">TEGNOLOGÍA MODERNA</h3>
           <h4>Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de
             simplificar los procesos
             laborales.</h4>
