corecciones tarea cuatro

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/modern-normalize.css" />
+  <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css" />
   <title> Web Studio Project </title>
 </head>
 
@@ -202,7 +202,7 @@
               <use href="#icon-antena"></use>
             </svg>
           </p>
-          <h3 class="icontitle">PATENCIÓN A LOS DETALLES</h3>
+          <h3 class="icontitle">ATENCIÓN A LOS DETALLES</h3>
           <h4>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar
             una solución a su medida.
           </h4>
@@ -278,7 +278,7 @@
         <ul class="coachs">
           <li class="the-coach">
             <figure class="photo">
-              <img src="images/img4.jpg" alt="Image4" width="270px" />
+              <img src="images/designer-andres.jpg" alt="Image4" width="270px" />
               <figcaption class="team-person">
                 <p class="description">Andrés Cubo</p>
                 <p class="thedescriptions1">Diseñador de Productos</p>
@@ -310,7 +310,7 @@
 
           <li class="the-coach">
             <figure class="photo">
-              <img src="images/img5.jpg" alt="Image5" width="270px" />
+              <img src="images/developer-carla.jpg" alt="Image5" width="270px" />
               <figcaption class="team-person">
                 <p class="description">Carla Palacios</p>
                 <p class="thedescriptions1">Desarrolladora Frontend</p>
@@ -341,7 +341,7 @@
 
           <li class="the-coach">
             <figure class="photo">
-              <img src="images/img6.jpg" alt="Image6" width="270px" />
+              <img src="images/marketing-mario.jpg" alt="Image6" width="270px" />
               <figcaption class="team-person">
                 <p class="description"> Mario Dorado</p>
                 <p class="thedescriptions1">Marketing</p>
@@ -372,7 +372,7 @@
 
           <li class="the-coach">
             <figure class="photo">
-              <img src="images/img7.jpg" alt="Image7" width="270px" />
+              <img src="images/designer-pablo.jpg" alt="Image7" width="270px" />
               <figcaption class="team-person">
                 <p class="description">Pablo Mijangos</p>
                 <p class="thedescriptions1">Diseñador IU</p>
