--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/modern-normalize.css" />
+  <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css" />
   <title> Portafolio </title>
 </head>
 
@@ -195,7 +195,7 @@
         <ul class="section">
           <li class="sections">
 
-            <img class="imag" src="images/I-1.jpg" alt="tecno" />
+            <img class="imag" src="images/web-tecnoduck.jpg" alt="tecno" />
             <h4 class="title-s">Tecnoduck</h4>
             <p class="thedescriptions">Sitio-web</p>
 
@@ -203,56 +203,56 @@
 
           <li class="sections">
 
-            <img class="imag" src="images/I-2.jpg" alt="basket" />
+            <img class="imag" src="images/poster-design.jpg" alt="basket" />
             <h4 class="title-s">Póster de Nueva Orleans vs Estrella Dorada </h4>
             <p class="thedescriptions">Diseño</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-3.jpg" alt="seafood" />
+            <img class="imag" src="images/app-restaurant.jpg" alt="seafood" />
             <h4 class="title-s">Restaurante Seafood</h4>
             <p class="thedescriptions">Aplicaciones</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-4.jpg" alt="marketing" />
+            <img class="imag" src="images/project-marketing.jpg" alt="marketing" />
             <h4 class="title-s">Proyecto Prime</h4>
             <p class="thedescriptions">Marketing</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-5.jpg" alt="box" />
+            <img class="imag" src="images/project-boxes.jpg" alt="box" />
             <h4 class="title-s">Proyecto Cajas</h4>
             <p class="thedescriptions">Aplicaciones</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-6.jpg" alt="siteweb" />
+            <img class="imag" src="images/web-inspiration.jpg" alt="siteweb" />
             <h4 class="title-s">La inspiración no tiene límites</h4>
             <p class="thedescriptions">Sitio-web</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-7.jpg" alt="desing" />
+            <img class="imag" src="images/desing-limitededition.jpg" alt="desing" />
             <h4 class="title-s">Edición Limitada</h4>
             <p class="thedescriptions">Diseño</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-8.jpg" alt="proyectlab" />
+            <img class="imag" src="images/lab-project.jpg" alt="proyectlab" />
             <h4 class="title-s">Proyecto LAB</h4>
             <p class="thedescriptions">Marketing</p>
 
           </li>
           <li class="sections">
 
-            <img class="imag" src="images/I-9.jpg" alt="apps" />
+            <img class="imag" src="images/app-business.jpg" alt="apps" />
             <h4 class="title-s">Negocio en Crecimiento</h4>
             <p class="thedescriptions">Aplicaciones</p>
 
